# creator-seo-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
docs/: gsc-setup.md
src/creator_seo_mcp/: cannibalization.py  config.py  decay.py  gsc.py  models.py  onpage.py  revenue.py  server.py  striking.py  wordpress.py
tests/: conftest.py  test_decay.py  test_gsc_auth.py  test_onpage.py  test_revenue.py  test_striking.py
tests/fixtures/: decay_prior.json  decay_recent.json  striking_sample.json
